<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.recommend.RecommendActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="center"
            app:tabIndicatorColor="@color/colorTextRed"
            app:tabIndicatorHeight="4dp"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/colorTextRed"
            app:tabTextColor="@color/colorTextGray"
            app:tabMinWidth="77dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_mate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend_tab_mate" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_spot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend_tab_spot" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend_tab_restaurant" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend_tab_information" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_recommend"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/vp_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vp_recommend" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>